implement dropdown with no jQuery

--- a/src/editor/index.html
+++ b/src/editor/index.html
@@ -477,7 +477,7 @@
                   <li>75%</li>
                   <li>100%</li>
                   <li class="special">
-                    <div id="opac_slider"></div>
+                    <input type="range" id="opac_slider"></input>
                   </li>
                 </ul>
               </div>
