fix issues with dropdown

--- a/src/editor/index.html
+++ b/src/editor/index.html
@@ -164,7 +164,7 @@
               <button></button>
               <ul>
                 <li class="special">
-                  <div id="blur_slider"></div>
+                  <input type="range" max=10 step=0.1 id="blur_slider"></input>
                 </li>
               </ul>
             </div>
